<resources>
    <string name="app_name">Playlist maker</string>
    <string name="search">Поиск</string>
    <string name="media">Медиатека</string>
    <string name="setting">Настройки</string>
    <string name="nitgh">Темная тема</string>
    <string name="to_share">Поделится приложением</string>
    <string name="write_to">Написать в подержку</string>
    <string name="agreement">Пользовательское соглашение</string>
    <string name="message">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="messageSubject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="uriDeveloper">https://practicum.yandex.ru/android-developer/</string>
    <string name="uriAgreement">https://yandex.ru/legal/practicum_offer/</string>
    <string name="myEmail">dmitr-nik.k@yandex.ru</string>
    <string name="not_found">Ничего не нашлось</string>
    <string name="no_signal">Проблема со связью. \n\nЗагрузка не удалась. Проверте подключение к интернету</string>
    <string name="update">Обновить</string>
    <string name="you_search">Вы искали</string>
    <string name="clear_history">Очистить историю</string>
    <string name="duration">Длителеность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="urldelov">https://practicum.yandex.ru/android-developer/</string>
    <string name="no_internet">Проверте подключение к интернету</string>
    <string name="emptyMediaLibrary">Ваша медиатека пуста</string>
    <string name="emptyPlaylist">Вы не создали \nни одного плейлиста</string>
    <string name="selectedTrack">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="newPlaylist">Новый плейлист</string>
    <string name="name_playlist">Название*</string>
    <string name="description">Описание</string>
    <string name="button_to_create">Создать</string>
    <string name="add_in_playlist">Добавить в плейлист</string>
    <string name="cancel">Отмена</string>
    <string name="complete">Завершить</string>
    <string name="heading_dialog_playlist">Завершить создание плейлиста?</string>
    <string name="description_dialog_playlist">Все несохраненые даные будут потеряны</string>
    <string name="add_playlist">Добавлено в плейлист</string>
    <string name="already_added">Трек уже добвлен в плейлист </string>
    <string name="to_share_playlist">Поделится</string>
    <string name="edit_info">Редактировать информацию</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="delete_track">Удалить трек</string>
    <string name="sure_delete_track">Вы уверены, что хотите удалить трек из плейлиста?</string>
    <string name="delete">Удалить</string>
    <string name="do_not_share_message">В этом плейлисте нет списка треков,\n которым можно поделиться</string>
    <string name="want_delete_playlist">Хотите удалить плейлист?</string>
    <string name="no_track_playlist">В этом плейлисте нет треков</string>
    <string name="edit">Редактировать</string>
    <string name="save">Сохранить</string>
    <string name="no_app">Нет подходящих приложений</string>
</resources>