<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.PlaylistMaker"
    android:background="?attr/colorOnSecondary"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/top_padding"
    android:paddingBottom="28dp">

    <TextView
        style="@style/headingText"
        android:layout_width="wrap_content"
        android:gravity="start"
        android:text="@string/app_name"
        android:textColor="@color/white">
    </TextView>

    <Button
        android:id="@+id/search_button"
        style="@style/main_button"
        android:layout_marginTop="40dp"
        android:text="@string/search"
        app:icon="@drawable/vector_search">

    </Button>

    <Button
        android:id="@+id/media_button"
        style="@style/main_button"
        android:text="@string/media"
        app:icon="@drawable/vector_media">

    </Button>

    <Button
        android:id="@+id/setting_button"
        style="@style/main_button"
        android:text="@string/setting"
        app:icon="@drawable/vector_setting">

    </Button>

</LinearLayout>