<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.PlaylistMaker"
    android:background="?attr/colorSecondary"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/top_4"
        android:layout_marginTop="@dimen/top_4">

        <ImageView
            android:id="@+id/back_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/top_padding"
            android:layout_marginTop="@dimen/top_padding"
            android:backgroundTint="@color/white"
            android:src="@drawable/vector_strelochka"
            android:contentDescription="@string/setting"/>

        <TextView
            style="@style/headingText"
            android:layout_marginStart = "@dimen/top_28"
            android:text="@string/setting">

        </TextView>

    </androidx.appcompat.widget.Toolbar>

    <FrameLayout
        style="@style/layout_lists"
        android:layout_marginTop="28dp">

        <TextView
            style="@style/MessageTextStyle"
            android:text="@string/nitgh">

        </TextView>

        <Switch
            android:id="@+id/switch1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginVertical="18dp"
            android:layout_marginTop="@dimen/icon_text"
            android:thumbTint="?attr/colorPrimaryVariant"
            android:trackTint="?attr/colorPrimaryVariant"
            tools:ignore="UseSwitchCompatOrMaterialXml,TouchTargetSizeCheck" />

    </FrameLayout>

    <FrameLayout
        style="@style/layout_lists">

        <TextView
            style="@style/MessageTextStyle"
            android:text="@string/to_share">

        </TextView>

        <ImageView
            android:id="@+id/shar"
            style="@style/vectors"
            android:contentDescription="@string/to_share"
            android:src="@drawable/vectorto_share"
            tools:ignore="ImageContrastCheck" />
    </FrameLayout>

    <FrameLayout
        style="@style/layout_lists">

        <TextView
            style="@style/MessageTextStyle"
            android:text="@string/write_to">

        </TextView>

        <ImageView
            android:id="@+id/write_to"
            style="@style/vectors"
            android:contentDescription="@string/write_to"
            android:src="@drawable/group"
            tools:ignore="ImageContrastCheck" />

    </FrameLayout>

    <FrameLayout
        style="@style/layout_lists">

        <TextView
            style="@style/MessageTextStyle"
            android:text="@string/agreement">

        </TextView>

        <ImageView
            android:id="@+id/user_agreement"
            style="@style/vectors"
            android:contentDescription="@string/agreement"
            android:src="@drawable/vector_agreement"
            tools:ignore="ImageContrastCheck" />
    </FrameLayout>
</LinearLayout>