<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSecondary"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/top_padding"
    android:theme="@style/Theme.PlaylistMaker">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="-12dp"
        android:layout_marginTop="@dimen/top_4">

        <TextView
            style="@style/headingText"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/top_padding"
            android:layout_marginTop="@dimen/top_padding"
            android:text="@string/search" />

    </androidx.appcompat.widget.Toolbar>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/inputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/top_8"
            android:autofillHints=""
            android:background="@drawable/rounded_edittext"
            android:drawableStart="@drawable/vector_search"
            android:drawablePadding="@dimen/top_8"
            android:fontFamily="@font/ys_display_regular"
            android:hint="@string/search"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:maxLength="100"
            android:maxLines="1"
            android:minHeight="@dimen/top_48"
            android:paddingStart="@dimen/top_padding"
            android:singleLine="true"
            android:textColor="@color/black_icon"
            android:textColorHint="?attr/colorPrimary"
            android:textCursorDrawable="@drawable/cursor_color"
            android:textFontWeight="400"
            android:textSize="@dimen/texts_16"
            tools:ignore="RtlSymmetry,TextContrastCheck" />

        <ImageView
            android:id="@+id/clearIcon"
            android:layout_width="@dimen/top_14"
            android:layout_height="@dimen/top_14"
            android:layout_gravity="end"
            android:layout_marginVertical="@dimen/top_24"
            android:layout_marginEnd="@dimen/top_12"
            android:src="@drawable/vector_cross"
            android:visibility="gone"
            tools:ignore="ContentDescription,ImageContrastCheck" />

    </FrameLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="148dp"
        android:indeterminateTint="@color/blue"
        android:visibility="gone" />

    <ImageView
        android:id="@+id/image_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="110dp"
        android:contentDescription="@string/app_name"
        android:visibility="gone" />

    <TextView
        android:id="@+id/errorMessage"
        style="@style/searchText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/top_padding"
        android:textAlignment="center"
        android:visibility="gone" />

    <Button
        android:id="@+id/update_button"
        style="@style/update_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/top_24"
        android:text="@string/update"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/you_search_text"
            style="@style/searchText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/top_padding"
            android:layout_marginTop="@dimen/top_48"
            android:text="@string/you_search"
            android:textAlignment="center"
            android:textFontWeight="500"
            android:textSize="19sp"
            android:visibility="gone" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/trackList"
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_height"
            android:layout_marginTop="@dimen/top_24"
            android:layout_weight="1"
            android:background="?attr/colorSecondary"
            android:visibility="visible"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:ignore="InefficientWeight" />

        <Button
            android:id="@+id/clear_history"
            style="@style/update_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/top_24"
            android:text="@string/clear_history"
            android:visibility="gone" />
    </LinearLayout>

</LinearLayout>

